--- a/Payment.html
+++ b/Payment.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8"/>
     <title>website số 1 về bất động sản</title>
-    <link rel="stylesheet" href="../ThanhToan/css/base.css"/>
-    <link rel="stylesheet" href="../ThanhToan/css/grid.css"/>
-    <link rel="stylesheet" href="../ThanhToan/css/category-pay.css"/>
-    <link rel="stylesheet" href="../ThanhToan/css/category.css"/>
+
     <link rel="stylesheet" href="./fonts/themify-icons/themify-icons.css"/>
+    <link rel="stylesheet" href="asserts/base.css">
+    <link rel="stylesheet" href="asserts/category.css">
+    <link rel="stylesheet" href="asserts/grid.css">
+    <link rel="stylesheet" href="asserts/category-pay.css">
 </head>
 <body>
 <header class="header">
